--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Extracted from https://github.com/ulrich/macaron-factory/blob/master/.gitignore
+# Ignore all dotfiles...
+.*
+# except for .gitignore
+!.gitignore
+
 # Ignore Play! working directory #
 bin/
 /db
@@ -15,3 +21,6 @@ server.pid
 *.eml
 /dist/
 .cache
+
+# Ignore configuration file #
+conf/application.conf
