--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -5,6 +5,7 @@ require:
     - org.apache.lucene -> lucene-core 4.7.2
     - org.apache.lucene -> lucene-analyzers-common 4.7.2
     - org.apache.lucene -> lucene-queryparser 4.7.2
+    - com.google.guava -> guava 16.0.1
     - provided -> ojdbc14 10.2.0.4.0
       
 repositories:
