--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -6,6 +6,7 @@ require:
     - org.apache.lucene -> lucene-analyzers-common 4.7.2
     - org.apache.lucene -> lucene-queryparser 4.7.2
     - com.google.guava -> guava 16.0.1
+    - uk.ac.ebi.brain -> Brain 1.5.1
     - provided -> ojdbc14 10.2.0.4.0
       
 repositories:
