--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ lucene/
 luceneAbstract/
 nbproject/
 data/NCITNCBO.owl
-eclipse/
+indexes/
 
 # Ignore configuration file #
 conf/application.conf
