--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -8,6 +8,7 @@ require:
     - com.google.guava -> guava 16.0.1
     - uk.ac.ebi.brain -> Brain 1.5.1
     - provided -> ojdbc14 10.2.0.4.0
+    - play -> morphia 1.2.12
       
 repositories:
   - provided:
